k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mkjs
  labels:
    app.kubernetes.io/part-of: mkjs
    app.kubernetes.io/managed-by: kubectl
