k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: mkjs
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: mkjs
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backend
  ports:
    - port: 55555
      targetPort: 55555
      protocol: TCP
      name: http
